--- a/style.css
+++ b/style.css
@@ -4,7 +4,7 @@
   background-color: #e5e5e5;
   max-width: 375px;
   height: 718px;
-  background-image: url("/assets/header-shapes\ mobile.png");
+  background-image: url("/assets/header-shapes-mobile.png");
   margin: auto;
 }
 
