--- a/style.css
+++ b/style.css
@@ -1,7 +1,7 @@
 @import url('https://fonts.googleapis.com/css2?family=Poppins:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;1,100;1,200;1,300;1,500;1,600;1,700&display=swap');
 
 .main_container {
-  background-color: #e5e5e5;
+  background-color: #fff;
   max-width: 375px;
   height: 100vh;
   background-image: url("/assets/header-shapes-mobile.png");
@@ -46,6 +46,7 @@ a {
 
 .connect_text {
   color: #7f8cff;
+  font-size: 16px;
 }
 
 .media_links a:hover {
