Update css file

--- a/style.css
+++ b/style.css
@@ -1,10 +1,14 @@
 @import url('https://fonts.googleapis.com/css2?family=Poppins:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;1,100;1,200;1,300;1,500;1,600;1,700&display=swap');
 
+body { 
+  font-family: 'poppins', serif;
+}
+
 .main_container {
   background-color: #fff;
   max-width: 375px;
   height: 100vh;
-  background-image: url("/assets/header-shapes-mobile.png");
+  background-image: url("assets/header-shapes-mobile.png");
   margin: auto;
 }
 
